# Agentic-RPA

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_poffices_agent.py  run_server.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  BLOCK_MANAGEMENT_DESIGN.md  DYNAMIC_GOAL_DRIVEN_RPA.md  GUIDE.md  IMPLEMENTATION_PLAN.md  L3_INTELLIGENT_RPA.md  L3_MULTI_AGENT_AND_COMPOUND_BLOCKS.md  LEVEL3_INTELLIGENT_RPA.md  LN13_BLOCK_USAGE_GUIDE.md  PLANNER_BLOCK_SEMANTICS_DESIGN.md  Poffices_Tech_Presentation_V2.1.organized.md  README.md  RPA_BLOCKS.md  RUN_REPORT_ANALYSIS.md  SCENARIO_DESIGN.md  STATUS.md  canvas_toby_rpa_merge_flow.json
raft/: README.md  __init__.py
scenarios/: experiment_poffices.json  experiment_poffices_casestudy_b.json  experiment_poffices_dynamic.json  experiment_poffices_force_llm.json  poffices-agent.json  task_specs.json
scripts/: aggregate_phase3_runs.py  build_flow_report.py  cleanup_root_random_files.py  export_trajectory.py  generate_report.py  invoke_poffices_run.py  ppt_extract.txt  replay_trajectory.py  run_poffices_bootstrap.py  visualize_progress.py
support/: main.py  pipeline(3).py  pipeline.py  scraper.py
tests/: __init__.py  test_b1_config.py  test_b2_routing.py  test_b3_dag.py  test_b4_assigner.py  test_block_management.py  test_build_flow_report_single_view.py  test_compound_dag_expansion.py  test_goal_driven_loop.py  test_goal_interpreter.py  test_goal_parser_sanitization.py  test_llm_client.py  test_office_discovery.py  test_poffices_agent.py  test_poffices_blocks.py  test_poffices_llm_agent.py  (+3 more)
(+68 files in other folders)
